--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -175,6 +175,8 @@
                                     <td>{{cr.service_appliance}}</td>
                                     <td>{{cr.service_type}}</td>
                                     <td>{{cr.status}}</td>
+                                    <td>
+                                        <button mat-button (click)="open(content)">Rate</button></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -207,6 +209,7 @@
                                     <td>{{canreq.service_appliance}}</td>
                                     <td>{{canreq.service_type}}</td>
                                     <td>{{canreq.status}}</td>
+
                                 </tr>
                             </tbody>
                         </table>
@@ -248,4 +251,39 @@
         </mat-tab-group>
 
     </mat-sidenav-content>
+    <ng-template #content let-c="close" let-d="dismiss">
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Service Rating</h4>
+            <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <form [formGroup]="rateForm">
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <ul class="list-inline rating-list" *ngFor="let star of stars" style="display: inline-block; color: darkgoldenrod;">
+                            <li (click)="countStar(star)" [ngClass]="{'selected': (star &lt;= selectedValue)}">
+                                <button mat-button>
+                                <mat-icon class="star">star</mat-icon>
+                            </button>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- <mat-form-field class="instructions" appearance="outline">
+                    <mat-label>Feedback</mat-label>
+                    <input matInput formControlName="technician_feedback" [errorStateMatcher]="matcher" placeholder="Give feedback for the experience" autocomplete="off">
+                    <mat-error *ngIf="rateForm.get('service_instruction').hasError('required')">
+                        Any feedback ?
+                    </mat-error>
+                </mat-form-field> -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="close" class="btn btn-outline-danger" (click)="c('Close')">Close</button>
+                <button type="button" class="btn btn-outline-dark" (click)="submit()">Save</button>
+            </div>
+        </form>
+    </ng-template>
+
 </mat-sidenav-container>
