--- a/src/app/technicians/technicians.component.css
+++ b/src/app/technicians/technicians.component.css
@@ -148,10 +148,11 @@
             }
             .titletxt {
                 color: #FFFFFF;
-                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
                 font-size: 25px;
-                margin-left: 30px;
-                margin-top: 50px;
+                float: left;
+                margin-left: 20px;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                margin-top: 30px;
             }
             .techicon {
                 width: 360px;
