--- a/src/app/technicians/technicians.component.html
+++ b/src/app/technicians/technicians.component.html
@@ -4,38 +4,32 @@
   <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
 </button>
         <br>
-
         <mat-nav-list class="nav-list">
-
             <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-
-
             <div class="dashboardside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-                    <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
+                    <a class="dashboard-btn" routerLink="/admin">Dashboard</a>
                 </mat-list-item>
             </div>
             <div class="bookingside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">worker</mat-icon>
-                    <a class="booking-btn" routerLink="/booking">Technicians</a>
+                    <a class="booking-btn" routerLink="/technicians">Technicians</a>
                 </mat-list-item>
             </div>
             <div class="profileside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-                    <a class="profile-btn" routerLink="/profile">Users</a>
+                    <a class="profile-btn" routerLink="/user">Users</a>
                 </mat-list-item>
             </div>
-
             <div class="logoutside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon">exit_to_app</mat-icon>
                     <a class="logout-btn" (click)="logout()">Logout</a>
                 </mat-list-item>
             </div>
-
         </mat-nav-list>
     </mat-sidenav>
 
