--- a/src/app/requestdetails/requestdetails.component.html
+++ b/src/app/requestdetails/requestdetails.component.html
@@ -24,7 +24,7 @@
             </h1>
         </div>
         <div>
-            <button mat-raised-button (click)="getConfirmation()" class="cancelBtn">Cancel Request</button>
+            <button mat-raised-button (click)="open(cancelReason)" class="cancelBtn">Cancel Request</button>
         </div>
 
         <mat-card class="summary">
@@ -108,3 +108,35 @@
     </div>
     <!--Technicians Details------------------------------------------------>
 </div>
+
+<ng-template #cancelReason let-c="close" let-d="dismiss">
+    <div class="modal-header">
+        <h4 class="modal-title" id="modal-basic-title">Are you sure ?</h4>
+        <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <form [formGroup]="cancelreasonForm">
+        <div class="modal-body">
+            <div>
+                <h6>Please share the reason to serve you better next time </h6>
+                <button mat-stroked-button class="radioBtn" value="Schedule conflict">
+                    <input type="radio" value="Schedule conflict" formControlName="reason" required>&nbsp;Schedule conflict.
+                </button>
+                <button mat-stroked-button class="radioBtn" value="Problem went away">
+                    <input type="radio" value="Problem went away" formControlName="reason" required>&nbsp;Problem went away.
+                </button>
+                <button mat-stroked-button class="radioBtn" value="Found another provider">
+                    <input type="radio" value="Found another provider" formControlName="reason" required>&nbsp;Found another provider.
+                </button>
+                <button mat-stroked-button class="radioBtn" value="Personal emergency">
+                    <input type="radio" value="Personal emergency" formControlName="reason" required>&nbsp;Personal emergency.
+                </button>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" id="close" class="btn btn-outline-primary" (click)="c('Close')">Keep my booking</button>
+            <button type="button" class="btn btn-outline-danger" (click)="getConfirmation()">Cancel Request</button>
+        </div>
+    </form>
+</ng-template>
