--- a/src/app/bookingform/bookingform.component.html
+++ b/src/app/bookingform/bookingform.component.html
@@ -6,29 +6,29 @@
         <br>
         <mat-nav-list class="nav-list">
             <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-            <div class="dashboardside">
+            <div class="dashboardside" routerLink="/dashboard">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label>home</mat-icon>
-                    <a class="dashboard-btn" routerLink="/dashboard">Home</a>
+                    <a class="dashboard-btn">Home</a>
                 </mat-list-item>
             </div>
-            <div class="bookingside">
+            <div class="bookingside" routerLink="/booking">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
-                    <a class="booking-btn" routerLink="/booking">Book a Service</a>
+                    <a class="booking-btn">Book a Service</a>
                 </mat-list-item>
             </div>
-            <div class="profileside">
+            <div class="profileside" routerLink="/profile">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-                    <a class="profile-btn" routerLink="/profile">Profile</a>
+                    <a class="profile-btn">Profile</a>
                 </mat-list-item>
             </div>
 
-            <div class="logoutside">
+            <div class="logoutside" (click)="logout()">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon">exit_to_app</mat-icon>
-                    <a class="logout-btn" (click)="logout()">Logout</a>
+                    <a class="logout-btn">Logout</a>
                 </mat-list-item>
             </div>
         </mat-nav-list>
