--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -37,6 +37,10 @@
         margin-left: 0px;
         margin-top: 150px;
         text-align: justify;
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
     }
     .dashboard-btn {
         color: #003049;
