--- a/src/app/profileform/profileform.component.css
+++ b/src/app/profileform/profileform.component.css
@@ -77,6 +77,10 @@
         margin-left: 0px;
         margin-top: 30px;
         text-align: justify;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        background-color: #D6B2BD;
     }
     .profileside:hover {
         background-color: #D6B2BD;
