--- a/src/app/washingmachine-install/washingmachine-install.component.html
+++ b/src/app/washingmachine-install/washingmachine-install.component.html
@@ -179,7 +179,7 @@
                                 <div>
                                     <mat-form-field class="datepicker" appearance="outline">
                                         <mat-label>Date of Service</mat-label>
-                                        <input matInput [matDatepicker]="picker" formControlName="service_date" autocomplete="off">
+                                        <input matInput [min]="tomorrow" [matDatepicker]="picker" formControlName="service_date" autocomplete="off">
                                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                         <mat-datepicker #picker></mat-datepicker>
                                         <mat-error *ngIf="scheduleForm.get('service_date').hasError('required')">
