--- a/src/app/paymentthankyou/paymentthankyou.component.html
+++ b/src/app/paymentthankyou/paymentthankyou.component.html
@@ -29,5 +29,5 @@
         </div>
     </mat-card>
     <h1 class="goTo" (click)="onSubmit()">
-        <mat-icon><b>keyboard_arrow_right</b></mat-icon>Go to Dashboard
+        <button mat-raised-button class="okBtn">OK</button>
     </h1>
