--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -21,8 +21,20 @@
             max-width: 200px;
             height: 100px !important;
             float: left;
-            margin-top: 10px !important;
+            margin-top: -20px !important;
             margin-left: 25px;
+        }
+        .adminvector {
+            width: 95%;
+            margin-top: -110px !important;
+            margin-left: 10px;
+        }
+        .sidetitle {
+            color: #003049;
+            font-size: 20px;
+            margin-top: -10px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-align: center;
         }
         .nav-icon {
             color: #003049;
@@ -35,7 +47,7 @@
         }
         .dashboardside {
             margin-left: 0px;
-            margin-top: 150px;
+            margin-top: 50px;
             text-align: justify;
             background-color: #D6B2BD;
             border-radius: 20px;
@@ -145,10 +157,16 @@
             margin-top: 60px;
         }
         .adminvector {
-            width: 16%;
-            margin-top: 100px !important;
-            float: right;
-            margin-right: 100px;
+            width: 95%;
+            margin-top: -110px !important;
+            margin-left: 10px;
+        }
+        .sidetitle {
+            color: #003049;
+            font-size: 20px;
+            margin-top: -10px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-align: center;
         }
         .mat-tab-group {
             margin-top: 200px;
