--- a/src/app/appliance-cleaning/appliance-cleaning.component.css
+++ b/src/app/appliance-cleaning/appliance-cleaning.component.css
@@ -19,8 +19,20 @@
         max-width: 200px;
         height: 100px !important;
         float: left;
-        margin-top: 10px !important;
+        margin-top: -20px !important;
         margin-left: 25px;
+    }
+    .adminvector {
+        width: 95%;
+        margin-top: -60px !important;
+        margin-left: 10px;
+    }
+    .sidetitle {
+        color: #003049;
+        font-size: 20px;
+        margin-top: -10px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
     }
     .nav-icon {
         color: #003049;
@@ -33,7 +45,7 @@
     }
     .dashboardside {
         margin-left: 0px;
-        margin-top: 150px;
+        margin-top: 50px;
         text-align: justify;
     }
     .dashboard-btn {
@@ -55,6 +67,10 @@
         margin-left: 0px;
         margin-top: 30px;
         text-align: justify;
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
     }
     .bookingside:hover {
         background-color: #D6B2BD;
@@ -114,23 +130,18 @@
     .spacer {
         flex: 1 1 auto;
     }
+    .backBtn {
+        font-size: 20px;
+        float: left;
+        margin-top: 10px;
+        margin-left: 50px;
+        background-color: grey;
+    }
     .backicon {
-        font-size: 40px;
-        color: #003049;
-        margin-left: 90px;
-        position: relative;
-        /* Adjust these values accordingly */
-        top: 12px;
-    }
-    .backtxt {
-        font-size: 22px;
-        color: #003049;
-        margin-left: 10px;
-    }
-    .backicon:hover,
-    .backtxt:hover {
-        color: rgb(250, 50, 50);
-        transition: 0.6ms;
+        color: #FFFFFF;
+        float: left;
+        margin-left: 2px;
+        font-size: 35px;
     }
     .dashtitle {
         color: #003049;
