--- a/src/app/bookingsummary-edit/bookingsummary-edit.component.css
+++ b/src/app/bookingsummary-edit/bookingsummary-edit.component.css
@@ -1,357 +1,281 @@
-@media (min-width: 820px)
-{
-mat-toolbar
-{
-  width: 100%;
-  height: 80px;
-}
-
-.logo
-{
-     max-width: 200px;
-     height: 100px !important;
-     margin-left: 30px !important;
-     margin-top: 20px !important;
-}
-
-
-.homeBtn
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #003049;
-  font-size: 17px;
-  float: left;
-  margin: 30px;
-  margin-left: 80px;
-  margin-top: 40px;
-}
-
-.homeBtn:hover, .homeBtn:active {
-  color:#dd0346;
-}
-
-.menuBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-}
-
-.menuBtn:hover, .menuBtn:active {
-    color:#dd0346;
-}
-
-.pricingBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-    font-size: 17px;
-    
-}
-
-
-.pricingBtn:hover, .pricingBtn:active {
-    color:#dd0346;
-}
-
-.contactUsBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-}
-
-.contactUsBtn:hover, .contactUsBtn:active {
-    color:#dd0346;
-}
-
-.aboutusBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-}
-
-.aboutusBtn:hover, .aboutusBtn:active {
-    color:#dd0346;
-}
-
-.spacer
-{
-    flex: 1 1 auto;
-  }
-
-.container{
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  margin-top: 50px;
-}
-.backtxt
-{
-color: #003049;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 13px;
-margin-top: -25px;
-margin-left: 50px;
-
-}
-
-.servicetype
-{
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
-  position: center;
-  margin: auto;
-  
-}
-
-.header
-{
-  width: 750px;
-  height: 200px;
-  margin-top: -10px !important;
-  position: center !important;
-  margin: auto;
-  
-}
-.summary
-{
-  margin: auto;
-  width: fit-content;
-  height: fit-content;
-  margin-top: 20px;
-}
-
-.summary2
-{
-  width: 1000px;
-  height: fit-content;
-  margin-top: 20px !important;
-  position: center !important;
-  margin: auto;
-  
-}
-.title
-{
-  color: #c9184a;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 30px;
-  margin-top: -35px;
-  margin-left: 70px;
-}
-
-.icon
-{
-  color: #c9184a;
-  font-size: 40px;
-  margin-top: 5px;
-  margin-left: 20px;
-}
-
-
-
-table,tr,th,td
-{
-  border: none;
-}
-
-.table
-{
-  margin-top: 50px;
-  
-}
-
-.header1
-{
-  
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  color: #c9184a;
-  border: none;
-  
-}
-
-.body1
-{
-  
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  color: #590D22;
-  border: none;
-  
-}
-
-.header2
-{
-  
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  color: #c9184a;
-  border: none;
-  
-}
-
-.body2
-{
-  
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  color: #590D22;
-  border: none;
-  
-}
-
-.header3
-{
-  
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  color: #FFFFFF;
-  border: none;
-  background-color: #b65e79;
-  text-align: center;
-}
-
-.body3
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  color: FFFFFF;
-  border: none;
-  text-align: center;
-}
-.price{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  color: #FFFFFF;
-  border: none;
-  background-color: #b65e79;
-  text-align: center;
-}
-.price1{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  color: FFFFFF;
-  border: none;
-  text-align: center;
-}
-.header4
-{
-  
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  color: #c9184a;
-  border: none;
-  
-}
-
-.body4
-{
-  
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  color: #590D22;
-  border: none;
-  
-}
-.editicon
-{
-  font-size: 18px;
-  margin-left: 10px;
-}
-
-.editicon2
-{
-  font-size: 18px;
-  margin-left: 10px;
-}
-
-.totaltxt
-{
-  color: #590D22;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 17px;
-  margin-top: -10px;
-  float: right;
-  margin-right: 120px;
-}
-.termschkbox
-{
-  text-align: center;
-  margin-top: 50px !important;
-  color: #590D22;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 17px;
-}
-.container1{
-  margin: auto;
-  width: fit-content;
-  height: inherit;
-}
-.ds{
-  margin: auto;
-  width: fit-content;
-}
-.submitBtn
-{
-  width: 100px;
-  height: 40px;
-  background-color: #590D22;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-  display: flex;  
-  justify-content: center;  
-  margin: auto; 
-  margin-top: 20px;
-  float: right;
-
-}
-
-.submitBtn:hover, .submitBtn:active {
-  color:#ffccd5;
-}
-.submitBtn-disabled
-{
-  width: 100px;
-  height: 40px;
-  border-color: #dd0346 !important;
-  color: #a4133c !important;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-  display: flex;  
-  justify-content: center;  
-  margin: auto; 
-  margin-top: 20px;
-  float: left;
-}
-.cancelBtn{
-  width: 120px;
-  height: 40px;
-  background-color: #D62828;
-  color: #FFFFFF;
-  font-size: 13px;
-  float: right;
-  margin: 5px;
-  margin-top: 1px;
-  margin-right: 50px;
-}
-
+@media (min-width: 820px) {
+    mat-toolbar {
+        width: 100%;
+        height: 80px;
+    }
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
+        margin-left: 30px !important;
+        margin-top: 20px !important;
+    }
+    .homeBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-left: 80px;
+        margin-top: 40px;
+    }
+    .homeBtn:hover,
+    .homeBtn:active {
+        color: #dd0346;
+    }
+    .menuBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
+    }
+    .pricingBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+        font-size: 17px;
+    }
+    .pricingBtn:hover,
+    .pricingBtn:active {
+        color: #dd0346;
+    }
+    .contactUsBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .contactUsBtn:hover,
+    .contactUsBtn:active {
+        color: #dd0346;
+    }
+    .aboutusBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .aboutusBtn:hover,
+    .aboutusBtn:active {
+        color: #dd0346;
+    }
+    .spacer {
+        flex: 1 1 auto;
+    }
+    .container {
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        margin-top: 50px;
+    }
+    .backtxt {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        margin-top: -25px;
+        margin-left: 50px;
+    }
+    .servicetype {
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        position: center;
+        margin: auto;
+    }
+    .header {
+        width: 750px;
+        height: 200px;
+        margin-top: -10px !important;
+        position: center !important;
+        margin: auto;
+    }
+    .summary {
+        margin: auto;
+        width: fit-content;
+        height: fit-content;
+        margin-top: 20px;
+    }
+    .summary2 {
+        width: 1000px;
+        height: fit-content;
+        margin-top: 20px !important;
+        position: center !important;
+        margin: auto;
+    }
+    .title {
+        color: #c9184a;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        margin-top: -35px;
+        margin-left: 70px;
+    }
+    .icon {
+        color: #c9184a;
+        font-size: 40px;
+        margin-top: 5px;
+        margin-left: 20px;
+    }
+    table,
+    tr,
+    th,
+    td {
+        border: none;
+    }
+    .table {
+        margin-top: 50px;
+    }
+    .header1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #c9184a;
+        border: none;
+    }
+    .body1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: #590D22;
+        border: none;
+    }
+    .header2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #c9184a;
+        border: none;
+    }
+    .body2 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: #590D22;
+        border: none;
+    }
+    .header3 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #FFFFFF;
+        border: none;
+        background-color: #b65e79;
+        text-align: center;
+    }
+    .body3 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: FFFFFF;
+        border: none;
+        text-align: center;
+    }
+    .price {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #FFFFFF;
+        border: none;
+        background-color: #b65e79;
+        text-align: center;
+    }
+    .price1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: FFFFFF;
+        border: none;
+        text-align: center;
+    }
+    .header4 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        color: #c9184a;
+        border: none;
+    }
+    .body4 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: #590D22;
+        border: none;
+    }
+    .editicon {
+        font-size: 18px;
+        margin-left: 10px;
+    }
+    .editicon2 {
+        font-size: 18px;
+        margin-left: 10px;
+    }
+    .totaltxt {
+        color: #590D22;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 17px;
+        margin-top: -10px;
+        float: right;
+        margin-right: 120px;
+    }
+    .termschkbox {
+        text-align: center;
+        margin-top: 50px !important;
+        color: #590D22;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 17px;
+    }
+    .container1 {
+        margin: auto;
+        width: fit-content;
+        height: inherit;
+    }
+    .ds {
+        margin: auto;
+        width: fit-content;
+    }
+    .submitBtn {
+        width: 100px;
+        height: 45px;
+        background-color: #fcb42a;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        margin-top: 20px;
+        float: right;
+    }
+    .submitBtn:hover,
+    .submitBtn:active {
+        color: #ffccd5;
+    }
+    .submitBtn-disabled {
+        width: 100px;
+        height: 45px;
+        border-color: #fcb42a !important;
+        color: #14213D !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        margin-top: 20px;
+        margin-right: 20px;
+        float: right;
+    }
+    .cancelBtn {
+        width: 120px;
+        height: 40px;
+        background-color: #D62828;
+        color: #FFFFFF;
+        font-size: 13px;
+        float: right;
+        margin: 5px;
+        margin-top: 1px;
+        margin-right: 50px;
+    }
 }
