--- a/src/app/bookingsummary/bookingsummary.component.css
+++ b/src/app/bookingsummary/bookingsummary.component.css
@@ -96,6 +96,27 @@
         position: center;
         margin: auto;
     }
+    .remindervector {
+        width: 20%;
+        margin-top: -65px !important;
+        float: left;
+        margin-left: -50px;
+    }
+    .reminder {
+        width: 1000px;
+        height: 100px;
+        margin-top: 60px !important;
+        position: center !important;
+        margin: auto;
+    }
+    .remindertitle {
+        color: #dd0346;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        float: left;
+        margin-left: 50px;
+        font-size: 20px;
+        margin-top: -20px;
+    }
     .summary {
         width: 1000px;
         height: fit-content;
@@ -111,17 +132,16 @@
         margin: auto;
     }
     .title {
-        color: #c9184a;
+        color: #b65e79;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 30px;
-        margin-top: -35px;
+        margin-top: 15px;
         margin-left: 70px;
     }
-    .icon {
-        color: #c9184a;
-        font-size: 40px;
-        margin-top: 5px;
-        margin-left: 20px;
+    .label {
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 15px;
     }
     table,
     tr,
@@ -135,25 +155,25 @@
     .header1 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
-        color: #c9184a;
+        color: #b65e79;
         border: none;
     }
     .body1 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 18px;
-        color: #590D22;
+        color: #14213D;
         border: none;
     }
     .header2 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
-        color: #c9184a;
+        color: #b65e79;
         border: none;
     }
     .body2 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 18px;
-        color: #590D22;
+        color: #14213D;
         border: none;
     }
     .header3 {
@@ -189,28 +209,27 @@
     .header4 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 16px;
-        color: #c9184a;
+        color: #b65e79;
         border: none;
     }
     .body4 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 18px;
-        color: #590D22;
+        color: #14213D;
         border: none;
     }
-    .editicon {
+    .editBtn {
         float: right;
-        color: #c9184a;
-        font-size: 35px;
-        margin-top: -25px;
-        margin-right: 30px;
+        margin-top: -80px;
+        margin-right: 150px;
+        background-color: #b65e79;
+        font-size: 15px;
     }
-    .editicon:hover {
-        color: #590D22;
-        transition: 0.6ms;
+    .editicon {
+        color: #FFFFFF;
     }
     .totaltxt {
-        color: #590D22;
+        color: #14213D;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 17px;
         margin-top: -10px;
@@ -220,35 +239,35 @@
     .termschkbox {
         text-align: center;
         margin-top: 50px !important;
-        color: #590D22;
+        color: #14213D;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 17px;
     }
     .submitBtn {
-        width: 100px;
+        width: 200px;
         height: 40px;
-        background-color: #590D22;
+        background-color: #fcb42a;
         color: #FFFFFF;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 14px;
+        font-size: 16px;
         display: flex;
-        justify-content: center;
+        text-align: center;
         margin: auto;
         margin-top: 20px;
     }
     .submitBtn:hover,
     .submitBtn:active {
-        color: #ffccd5;
+        color: #14213D;
     }
     .submitBtn-disabled {
-        width: 100px;
+        width: 200px;
         height: 40px;
-        border-color: #dd0346 !important;
-        color: #a4133c !important;
+        border-color: #fcb42a !important;
+        color: #14213D !important;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 14px;
+        font-size: 16px;
         display: flex;
-        justify-content: center;
+        text-align: center;
         margin: auto;
         margin-top: 20px;
     }
@@ -257,10 +276,8 @@
         height: 40px;
         background-color: #D62828;
         color: #FFFFFF;
-        font-size: 13px;
         float: right;
-        margin: 5px;
-        margin-top: 1px;
-        margin-right: 50px;
+        font-size: 13px;
+        margin-top: -80px;
     }
 }
