--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,9 +6,10 @@
         <br>
 
         <mat-nav-list class="nav-list">
-
             <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+            <img class="adminvector" mat-card-image src="../../assets/customervector.png">
 
+            <h1 class="sidetitle">{{fname}}</h1>
 
             <div class="dashboardside" routerLink="/dashboard">
                 <mat-list-item (click)="closeSideNav()">
@@ -78,7 +79,7 @@
                 </div>
             </mat-card>
 
-            <img class="customervector" mat-card-image src="../../assets/customervector.png">
+
         </div>
 
 
