--- a/src/app/edit-profile/edit-profile.component.css
+++ b/src/app/edit-profile/edit-profile.component.css
@@ -16,7 +16,7 @@
 .mat-toolbar {
     background-color: #DD0346;
     width: 100%;
-    height: 200px;
+    height: 100px;
     box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
 }
 
@@ -24,8 +24,22 @@
     max-width: 200px;
     height: 100px !important;
     float: left;
-    margin-top: 10px !important;
+    margin-top: -20px !important;
     margin-left: 25px;
+}
+
+.adminvector {
+    width: 95%;
+    margin-top: -60px !important;
+    margin-left: 10px;
+}
+
+.sidetitle {
+    color: #003049;
+    font-size: 20px;
+    margin-top: -10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
 }
 
 .nav-icon {
@@ -41,7 +55,7 @@ mat-list-item {
 
 .dashboardside {
     margin-left: 0px;
-    margin-top: 150px;
+    margin-top: 50px;
     text-align: justify;
 }
 
@@ -177,6 +191,34 @@ mat-list-item {
     color: #FFFFFF;
 }
 
+.headertitle {
+    position: center !important;
+    margin: auto;
+}
+
+.titletxt {
+    color: #FFFFFF;
+    font-size: 25px;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 20px;
+}
+
+.backBtn {
+    font-size: 20px;
+    float: left;
+    margin-top: 10px !important;
+    margin-left: 50px;
+    background-color: #FFFFFF;
+}
+
+.backicon {
+    color: #dd0346;
+    float: left;
+    margin-left: 2px;
+    font-size: 35px;
+}
+
 .container {
     width: fit-content;
     height: 100%;
@@ -212,16 +254,28 @@ mat-icon {
     color: #003049;
 }
 
-.saveBtn {
+.cancelBtn {
     width: 90px;
-    height: 40px;
-    margin-top: 10px;
+    height: 50px;
+    margin-top: 60px;
     font-size: 16px;
     float: right;
-    margin-right: 20px;
+    margin-right: 10px;
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-color: #fcb42a;
+}
+
+.saveBtn {
+    width: 130px;
+    height: 50px;
+    margin-top: 60px;
+    font-size: 16px;
+    float: right;
+    margin-right: 10px;
     color: #FFFFFF;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #590D22;
+    background-color: #fcb42a;
 }
 
 .infoLbl {
