--- a/src/app/paymentform/paymentform.component.css
+++ b/src/app/paymentform/paymentform.component.css
@@ -85,6 +85,21 @@
     flex: 1 1 auto;
 }
 
+.backBtn {
+    font-size: 20px;
+    float: left;
+    margin-top: 10px !important;
+    margin-left: -100px;
+    background-color: grey;
+}
+
+.backicon {
+    color: #FFFFFF;
+    float: left;
+    margin-left: 2px;
+    font-size: 35px;
+}
+
 .paypalBtn {
     width: 25%;
     float: right;
@@ -93,9 +108,16 @@
 }
 
 .paymentinfotxt {
-    color: #003049;
+    color: #b65e79;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 25px;
+    margin-top: 20px;
+}
+
+table,
+thead tr,
+th {
+    border: none;
 }
 
 .payBtn {
@@ -135,24 +157,23 @@
     margin-top: 70px;
 }
 
-.pendingvector {
-    width: 20%;
-    height: 20%;
-    float: right;
-    margin-top: 20px;
+.confirmedvector {
+    width: 35%;
+    float: left;
+    margin-top: -75px !important;
 }
 
 .pendingtxt {
-    color: #007f5f;
+    color: #0db30d;
     float: left;
     margin-left: 10px;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .description {
-    margin-top: 5px;
-    float: right;
-    margin-right: 300px;
+    margin-top: 35px;
+    float: left;
+    margin-left: -305px;
 }
 
 .description1 {
