--- a/src/app/paymentthankyou/paymentthankyou.component.css
+++ b/src/app/paymentthankyou/paymentthankyou.component.css
@@ -131,8 +131,8 @@
     color: #007f5f;
     font-size: 28px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 100px;
-    margin-left: 220px;
+    margin-top: 20px;
+    text-align: center;
 }
 
 .goTo {
@@ -144,9 +144,13 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-mat-icon {
-    font-size: 25px;
-    float: left;
-    margin-left: 50px;
-    color: #003049;
+.okBtn {
+    width: 90px;
+    height: 50px;
+    float: right;
+    margin-right: 35px;
+    background-color: #fcb42a;
+    color: #FFFFFF;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
 }
