--- a/src/app/profileform/profileform.component.css
+++ b/src/app/profileform/profileform.component.css
@@ -14,15 +14,27 @@
     .mat-toolbar {
         background-color: #DD0346;
         width: 100%;
-        height: 200px;
+        height: 100px;
         box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
     }
     .logo {
         max-width: 200px;
         height: 100px !important;
         float: left;
-        margin-top: 10px !important;
+        margin-top: -20px !important;
         margin-left: 25px;
+    }
+    .adminvector {
+        width: 95%;
+        margin-top: -60px !important;
+        margin-left: 10px;
+    }
+    .sidetitle {
+        color: #003049;
+        font-size: 20px;
+        margin-top: -10px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
     }
     .nav-icon {
         color: #003049;
@@ -35,7 +47,7 @@
     }
     .dashboardside {
         margin-left: 0px;
-        margin-top: 150px;
+        margin-top: 50px;
         text-align: justify;
     }
     .dashboard-btn {
@@ -185,12 +197,43 @@
         margin-left: 80px;
         margin-top: 50px;
     }
+    .editBtn {
+        background-color: #dd0346;
+        float: right;
+    }
+    .editicon {
+        color: #FFFFFF;
+    }
+    .headertitle {
+        position: center !important;
+        margin: auto;
+    }
+    .titletxt {
+        color: #FFFFFF;
+        font-size: 25px;
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: 20px;
+    }
+    .backBtn {
+        font-size: 20px;
+        float: left;
+        margin-top: 20px;
+        margin-left: 50px;
+        background-color: #FFFFFF;
+    }
+    .backicon {
+        color: #dd0346;
+        float: left;
+        margin-left: 2px;
+        font-size: 35px;
+    }
     .infocard {
         width: 800px;
         height: 250px;
         float: left;
         margin-top: 120px;
-        margin-left: -165px;
+        margin-left: 85px;
     }
     .addresscard {
         width: 800px;
@@ -220,13 +263,6 @@
     }
     .paper-label {
         color: grey;
-    }
-    .editbtn {
-        float: right;
-        background-color: #590D22;
-    }
-    .editicon {
-        color: #FFFFFF;
     }
     h3 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
