--- a/src/app/technicians/technicians.component.html
+++ b/src/app/technicians/technicians.component.html
@@ -6,6 +6,10 @@
         <br>
         <mat-nav-list class="nav-list">
             <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+            <img class="adminvector" mat-card-image src="../../assets/admin.png">
+
+            <h1 class="sidetitle">Admin</h1>
+
             <div class="dashboardside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
