--- a/src/app/techprofile/techprofile.component.html
+++ b/src/app/techprofile/techprofile.component.html
@@ -6,6 +6,10 @@
         <br>
         <mat-nav-list class="nav-list">
             <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+            <img class="adminvector" mat-card-image src="../../assets/admin.png">
+
+            <h1 class="sidetitle">Admin</h1>
+
             <div class="dashboardside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
@@ -46,31 +50,27 @@
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
               <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
           </button>
-            <h1 class="titletxt">Profile</h1>
+
+            <button class="backBtn" routerLink="/technicians" mat-icon-button>
+            <mat-icon class="backicon">chevron_left</mat-icon>
+          </button>
+
+            <div class="headertitle">
+                <h1 class="titletxt">Profile</h1>
+            </div>
         </mat-toolbar>
 
 
-        <button class="backBtn" routerLink="/technicians" mat-icon-button>
-            <mat-icon class="backicon">chevron_left</mat-icon>
-          </button>
+
         <div>
             <mat-card class="profilecard">
                 <div class="mat-dialog-content">
-                    <h1 class="techname">{{data.fullname}}</h1>
+                    <h1>Personal Information</h1>
+                    <h2 class="techname">{{data.fullname}}</h2>
 
-                    <p class="contactnumber">Gender</p>
-                    <p class="number">{{data.number}}</p>
 
-                    <p class="contactnumber">Date of Birth</p>
-                    <p class="number">{{data.number}}</p>
-
-                    <p class="contactnumber">Contact Number</p>
-                    <p class="number">{{data.number}}</p>
-
-                    <p class="address">Home Address</p>
-                    <p class="add">{{data.address}}</p>
                 </div>
             </mat-card>
 
-            <img class="vector" mat-card-image src="../../assets/addtech.png">
+
         </div>
